Improve group history question answering (#258)